Closed Bug 1910637 Opened 7 months ago Closed 7 months ago

youtube lag when scroll

Categories

(Core :: Graphics: WebRender, defect)

Firefox 130
defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox128 --- unaffected
firefox129 --- unaffected
firefox130 --- fixed

People

(Reporter: mix5003, Assigned: sotaro)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:130.0) Gecko/20100101 Firefox/130.0

Steps to reproduce:

  1. go to https://www.youtube.com/watch?v=QuW3yUaDhLI and config to 1080p (may be use theater mode too)
  2. scroll up and down

VIDEO: https://www.youtube.com/watch?v=vFs6A5LstXI

Actual results:

scroll scroll it lag a little bit when video in viewport
and some framedrop

Expected results:

it should not lag when scroll with video in view port

mozregression

Bug 1908585 - Disable overlay only for slow present video r=gfx-reviewers,lsalzman

The change disables video overlay only for the slow present video, instead of disabling overlay in system wide.

Disabling the overlay is decided by DCSurfaceVideo. And controlling overlay usage is done by AsyncImagePipelineManager. To deliver the decision, RenderTextureHostUsageInfo is used. RenderTextureHostUsageInfo is shared among, DCSurfaceVideo, RenderTextureHost, AsyncImagePipelineManager and WebRenderImageHost.

Then if RenderTextureHostUsageInfo::DisableVideoOverlay() is called by DCSurfaceVideo, AsyncImagePipelineManager could know if overlay is disabled for TextureHost by RenderTextureHostUsageInfo::DisableVideoOverlay().

WebRenderImageHost retains the RenderTextureHostUsageInfo returned by RenderTextureHost and reuses the returned RenderTextureHostUsageInfo. And if the video overlay is disabled, the disabled overlay is retained for the lifetime of WebRenderImageHost.

There is a case that RenderTextureHost::GetOrMergeUsageInfo() needs to merge 2 RenderTextureHostUsageInfos to one RenderTextureHostUsageInfo. It happens when one TextureHost is used by multiple WebRenderImageHosts.

Differential Revision: https://phabricator.services.mozilla.com/D217355

Thanks for doing the bisection!

  1. Can you paste the contents of about:support to this bug?
  2. Capture a performance profile with the "graphics" preset when you see the lag/stutter. See this user guide : https://profiler.firefox.com/docs/#/./guide-getting-started
Keywords: regression
Regressed by: 1908585
Attached file about:support
from mozregression run single build at 2024-07-30 graphics Profile link: https://share.firefox.dev/3ynfzft media profile link: https://share.firefox.dev/4c5M53z (just in case) about:support
Assignee: nobody → sotaro.ikeda.g

The Bugbug bot thinks this bug should belong to the 'Core::Graphics: WebRender' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.

Component: Untriaged → Graphics: WebRender
Product: Firefox → Core

(In reply to mix5003 from comment #3)

from mozregression run single build at 2024-07-30
graphics Profile link: https://share.firefox.dev/3ynfzft
media profile link: https://share.firefox.dev/4c5M53z (just in case)

Confirmed from the profile that slow present tried to disable video overlay of hardware decoded video, but the overlay was not disabled.

Blocks: 1903455

There is a 2 places to disable video overlays.

I forgot to add calling DCSurfaceVideo::DisableVideoOverlay() in DCSurfaceVideo::PresentVideo() :(

Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a3c1da05983f Call DisableVideoOverlay() in DCSurfaceVideo::PresentVideo() if necessary r=gfx-reviewers,lsalzman
Status: UNCONFIRMED → RESOLVED
Closed: 7 months ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch

Set release status flags based on info from the regressing bug 1908585

Hi mix5003, does the problem addressed with latest nightly?

Flags: needinfo?(mix5003)

i think latest nightly fixed this problem. Thanks

Flags: needinfo?(mix5003)

Great! Thank you for checking.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: