Bug 1910637 - Call DisableVideoOverlay() in DCSurfaceVideo::PresentVideo() if necessary r=gfx-reviewers,lsalzman

Bug 1908585 fix forgot to call DisableVideoOverlay() in DCSurfaceVideo::PresentVideo() by mistake. It is necessary to disable video overlay when the overlay is slow.

Differential Revision: https://phabricator.services.mozilla.com/D218097